--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<h1> Registrační systém </h1>
+	
+	<div class="registracniUdaje"></div>
+	<div class="zmena"> Výpočet mzdy</div>
+	<div class="kalkulacka"> Kalkulačka </div>
+
+	<div class="vysledekZavodu"></div>
+
 	<script src="main.js"></script>
 </body>
 </html>
